--- a/White_Wine_Logistic_Regression.ipynb
+++ b/White_Wine_Logistic_Regression.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b8096948",
+   "id": "344f88b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a0bbdfda",
+   "id": "539b2d0d",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a1371e0b",
+   "id": "213210a7",
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "09e8cd90",
+   "id": "0b111657",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3363c708",
+   "id": "7b09ae7d",
    "metadata": {},
    "outputs": [
     {
@@ -524,7 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "716fd852",
+   "id": "042beedf",
    "metadata": {},
    "outputs": [
     {
@@ -549,7 +549,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "320674bc",
+   "id": "880355a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "3cc36051",
+   "id": "f91f1b82",
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "b24e907e",
+   "id": "98a2fef1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "61d9f33f",
+   "id": "b7ec34ce",
    "metadata": {},
    "outputs": [
     {
@@ -655,7 +655,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "6b3de69a",
+   "id": "4f17ccb9",
    "metadata": {},
    "outputs": [
     {
@@ -740,7 +740,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "0acc9b5b",
+   "id": "d4e12282",
    "metadata": {},
    "outputs": [
     {
@@ -764,7 +764,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "6efb800d",
+   "id": "bb2fb5bc",
    "metadata": {},
    "outputs": [
     {
@@ -797,7 +797,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "4e248581",
+   "id": "94adf3d3",
    "metadata": {},
    "outputs": [
     {
@@ -831,7 +831,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "b87fdfd6",
+   "id": "257bc822",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -840,29 +840,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "93aded68",
+   "execution_count": 35,
+   "id": "6d87bd4f",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.4074133590444051"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Training Data Score: 0.8424973394820858\n",
+      " Testing Data Score: 0.8404255319148937\n",
+      " Balanced Accuracy Score: 0.6810487974717446\n"
+     ]
     }
    ],
    "source": [
-    "balanced_accuracy_score(y_test, predictions)"
+    "print(f\" Training Data Score: {ROS_model.score(X_train, y_train)}\")\n",
+    "print(f\" Testing Data Score: {ROS_model.score(X_test, y_test)}\")\n",
+    "print(f\" Balanced Accuracy Score: {balanced_accuracy_score(y_test, y_prediction)}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "b583f536",
+   "id": "87220941",
    "metadata": {},
    "outputs": [
     {
@@ -883,7 +884,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "712937fc",
+   "id": "61a07993",
    "metadata": {},
    "outputs": [
     {
@@ -922,8 +923,136 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "id": "b7d658b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import the RandomOverSampler module form imbalanced-learn\n",
+    "from imblearn.over_sampling import RandomOverSampler\n",
+    "\n",
+    "# Instantiate the random oversampler model\n",
+    "# # Assign a random_state parameter of 1 to the model\n",
+    "random_over_sampler=RandomOverSampler(random_state = 1)\n",
+    "\n",
+    "# Fit the original training data to the random_oversampler model\n",
+    "x_resampled, y_resampled = random_over_sampler.fit_resample(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "791120e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0    2666\n",
+       "1.0    2666\n",
+       "2.0    2666\n",
+       "Name: Price, dtype: int64"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_resampled.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "2f788824",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Instantiate the Logistic Regression model\n",
+    "# Assign a random_state parameter of 1 to the model\n",
+    "ros_model = LogisticRegression(solver='lbfgs', random_state=1)\n",
+    "\n",
+    "\n",
+    "# Fit the model using the resampled training data\n",
+    "ros_model.fit(x_resampled, y_resampled)\n",
+    "\n",
+    "# Make a prediction using the testing data\n",
+    "y_prediction = ros_model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "f34df2a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Balanced Accuracy Score: 0.6810487974717446\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\" Balanced Accuracy Score: {balanced_accuracy_score(y_test, y_prediction)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "d04f1ea7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[755 128   6]\n",
+      " [  9  34   6]\n",
+      " [  0   1   1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ros_test_matrix = confusion_matrix(y_test, y_prediction)\n",
+    "print(ros_test_matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "8958efd6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       0.99      0.85      0.91       889\n",
+      "         1.0       0.21      0.69      0.32        49\n",
+      "         2.0       0.08      0.50      0.13         2\n",
+      "\n",
+      "    accuracy                           0.84       940\n",
+      "   macro avg       0.42      0.68      0.46       940\n",
+      "weighted avg       0.95      0.84      0.88       940\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "ros_test_report = classification_report(y_test, y_prediction)\n",
+    "print(ros_test_report)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "77130d01",
+   "id": "a6184329",
    "metadata": {},
    "outputs": [],
    "source": []
