--- a/Red_Regression_Price.ipynb
+++ b/Red_Regression_Price.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "c7ec7a20",
+   "execution_count": 2,
+   "id": "259c5cd3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,8 +16,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "9638f28c",
+   "execution_count": 3,
+   "id": "3bffbdf6",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
        "4            Markowitsch     3.9              100  29.15  2016  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,8 +139,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "30b798f0",
+   "execution_count": 4,
+   "id": "e036415a",
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,8 +168,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "ecb2c94b",
+   "execution_count": 5,
+   "id": "d6900293",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,8 +184,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "7bff0c08",
+   "execution_count": 6,
+   "id": "3702b678",
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +512,7 @@
        "19              100    0.0  2016  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,8 +523,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "fdf61630",
+   "execution_count": 7,
+   "id": "59a554a4",
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +537,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,8 +548,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "421e99da",
+   "execution_count": 8,
+   "id": "bf540887",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,8 +558,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "1592a362",
+   "execution_count": 9,
+   "id": "ba239a39",
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -611,8 +611,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "40d04723",
+   "execution_count": 10,
+   "id": "30589beb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,8 +623,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "33b4a553",
+   "execution_count": 11,
+   "id": "c83485cf",
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +638,7 @@
        "Name: Price, dtype: float64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -649,8 +649,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "1791eb5c",
+   "execution_count": 12,
+   "id": "54872a7c",
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +723,7 @@
        "4     3.9              100  2016"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -734,8 +734,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "8844b44f",
+   "execution_count": 13,
+   "id": "a1d44def",
    "metadata": {},
    "outputs": [
     {
@@ -747,7 +747,7 @@
        "Name: Price, dtype: int64"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,8 +758,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "9b3f5572",
+   "execution_count": 14,
+   "id": "4145a0ee",
    "metadata": {},
    "outputs": [
     {
@@ -768,7 +768,7 @@
        "(6493, 3)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -791,8 +791,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "1e3406c6",
+   "execution_count": 15,
+   "id": "81eaf9be",
    "metadata": {},
    "outputs": [
     {
@@ -801,7 +801,7 @@
        "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -825,8 +825,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "82e30075",
+   "execution_count": 16,
+   "id": "79f9d0b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -835,8 +835,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "42e75d54",
+   "execution_count": 19,
+   "id": "29e62532",
    "metadata": {},
    "outputs": [
     {
@@ -845,7 +845,7 @@
        "0.4655314714730026"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -856,8 +856,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "be7820d7",
+   "execution_count": 20,
+   "id": "f4dbbc55",
    "metadata": {},
    "outputs": [
     {
@@ -877,8 +877,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "7c912689",
+   "execution_count": 21,
+   "id": "05cdfeec",
    "metadata": {},
    "outputs": [
     {
@@ -901,11 +901,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Luis Santamaria\\anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1318: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "/Users/kianatalavera/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages/sklearn/metrics/_classification.py:1318: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
       "  _warn_prf(average, modifier, msg_start, len(result))\n",
-      "C:\\Users\\Luis Santamaria\\anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1318: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "/Users/kianatalavera/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages/sklearn/metrics/_classification.py:1318: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
       "  _warn_prf(average, modifier, msg_start, len(result))\n",
-      "C:\\Users\\Luis Santamaria\\anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1318: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "/Users/kianatalavera/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages/sklearn/metrics/_classification.py:1318: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
       "  _warn_prf(average, modifier, msg_start, len(result))\n"
      ]
     }
@@ -918,7 +918,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9085ed90",
+   "id": "ec5c58de",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -940,7 +940,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
