--- a/WRegression_Price.ipynb
+++ b/WRegression_Price.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "344f88b1",
+   "execution_count": 3,
+   "id": "6ffaabe4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,8 +16,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "539b2d0d",
+   "execution_count": 4,
+   "id": "a6e45537",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
        "4                Luna Gaia     3.9               25   8.60  2018  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,8 +139,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "213210a7",
+   "execution_count": 5,
+   "id": "9e5a92b7",
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,8 +168,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "0b111657",
+   "execution_count": 6,
+   "id": "81857a75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,8 +184,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "7b09ae7d",
+   "execution_count": 7,
+   "id": "b7c0447a",
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +512,7 @@
        "19               25    0.0  2018  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,8 +523,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "042beedf",
+   "execution_count": 8,
+   "id": "c383cbbe",
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +537,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,8 +548,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "880355a0",
+   "execution_count": 9,
+   "id": "18edc0c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,8 +558,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "f91f1b82",
+   "execution_count": 10,
+   "id": "298ff53a",
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +590,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,8 +601,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "98a2fef1",
+   "execution_count": 11,
+   "id": "fae14dda",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b7ec34ce",
+   "id": "54687622",
    "metadata": {},
    "outputs": [
     {
@@ -655,7 +655,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "4f17ccb9",
+   "id": "da97c64c",
    "metadata": {},
    "outputs": [
     {
@@ -740,7 +740,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "d4e12282",
+   "id": "a52c8ef3",
    "metadata": {},
    "outputs": [
     {
@@ -764,7 +764,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "bb2fb5bc",
+   "id": "89a639ea",
    "metadata": {},
    "outputs": [
     {
@@ -797,7 +797,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "94adf3d3",
+   "id": "c277a1ab",
    "metadata": {},
    "outputs": [
     {
@@ -831,7 +831,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "257bc822",
+   "id": "d4feaef2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -840,30 +840,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "6d87bd4f",
+   "execution_count": 19,
+   "id": "c40d9f9b",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " Training Data Score: 0.8424973394820858\n",
-      " Testing Data Score: 0.8404255319148937\n",
-      " Balanced Accuracy Score: 0.6810487974717446\n"
-     ]
+     "data": {
+      "text/plain": [
+       "0.4074133590444051"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(f\" Training Data Score: {ROS_model.score(X_train, y_train)}\")\n",
-    "print(f\" Testing Data Score: {ROS_model.score(X_test, y_test)}\")\n",
-    "print(f\" Balanced Accuracy Score: {balanced_accuracy_score(y_test, y_prediction)}\")"
+    "balanced_accuracy_score(y_test, predictions)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "87220941",
+   "execution_count": 20,
+   "id": "96c5d4ac",
    "metadata": {},
    "outputs": [
     {
@@ -883,8 +882,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "61a07993",
+   "execution_count": 21,
+   "id": "b5641490",
    "metadata": {},
    "outputs": [
     {
@@ -923,136 +922,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "b7d658b7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Import the RandomOverSampler module form imbalanced-learn\n",
-    "from imblearn.over_sampling import RandomOverSampler\n",
-    "\n",
-    "# Instantiate the random oversampler model\n",
-    "# # Assign a random_state parameter of 1 to the model\n",
-    "random_over_sampler=RandomOverSampler(random_state = 1)\n",
-    "\n",
-    "# Fit the original training data to the random_oversampler model\n",
-    "x_resampled, y_resampled = random_over_sampler.fit_resample(X_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "791120e2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.0    2666\n",
-       "1.0    2666\n",
-       "2.0    2666\n",
-       "Name: Price, dtype: int64"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y_resampled.value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "2f788824",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Instantiate the Logistic Regression model\n",
-    "# Assign a random_state parameter of 1 to the model\n",
-    "ros_model = LogisticRegression(solver='lbfgs', random_state=1)\n",
-    "\n",
-    "\n",
-    "# Fit the model using the resampled training data\n",
-    "ros_model.fit(x_resampled, y_resampled)\n",
-    "\n",
-    "# Make a prediction using the testing data\n",
-    "y_prediction = ros_model.predict(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "f34df2a3",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " Balanced Accuracy Score: 0.6810487974717446\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(f\" Balanced Accuracy Score: {balanced_accuracy_score(y_test, y_prediction)}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "d04f1ea7",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[755 128   6]\n",
-      " [  9  34   6]\n",
-      " [  0   1   1]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "ros_test_matrix = confusion_matrix(y_test, y_prediction)\n",
-    "print(ros_test_matrix)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "8958efd6",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "         0.0       0.99      0.85      0.91       889\n",
-      "         1.0       0.21      0.69      0.32        49\n",
-      "         2.0       0.08      0.50      0.13         2\n",
-      "\n",
-      "    accuracy                           0.84       940\n",
-      "   macro avg       0.42      0.68      0.46       940\n",
-      "weighted avg       0.95      0.84      0.88       940\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "ros_test_report = classification_report(y_test, y_prediction)\n",
-    "print(ros_test_report)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "a6184329",
+   "id": "c74ccea3",
    "metadata": {},
    "outputs": [],
    "source": []
